fixed div spacing issue

--- a/Feeding Fido/src/style.css
+++ b/Feeding Fido/src/style.css
@@ -88,4 +88,10 @@ main{
   height: auto;
 }
 
+#instructionsScreen{
+ max-width: fit-content;
+ margin-left: auto;
+ margin-right: auto;
+}
+
 
